overflow problem fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,6 +15,10 @@
     transition: all .2s ease-in-out;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /* Some */
 .view-btn:hover,
 .insta-btn:hover,
